--- a/Views/Shared/_ThemeSwitcher.cshtml
+++ b/Views/Shared/_ThemeSwitcher.cshtml
@@ -1,8 +1,13 @@
-<details class="dropdown">
-    <summary role="button" class="outline">Theme</summary>
-    <ul>
-        <li><a href="#" data-theme-switcher="auto">Auto</a></li>
-        <li><a href="#" data-theme-switcher="light">Light</a></li>
-        <li><a href="#" data-theme-switcher="dark">Dark</a></li>
-    </ul>
-</details>
+<div class="ThemeSwitcher">
+    <i class="fa-solid fa-sun"></i>
+
+    <input
+    class="ThemeSwitcher-checkbox"
+    type="checkbox"
+    role="switch"
+    name="theme"
+    value="dark"
+    />
+
+    <i class="fa-solid fa-moon"></i>
+</div>
