--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,9 +48,14 @@
         </main>
     </div>
 
-    <footer id="Footer">
+    <footer class="Footer">
         <div>
-            &copy; 2024 - init - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            Real State -
+            <a
+                href="https://github.com/EmanuelAngel">
+                Angel Emanuel
+                <i class="fa-brands fa-github"></i>
+            </a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
