--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -3,11 +3,17 @@
 @{
   ViewData["title"] = "Users";
 }
+<section>
+  <hgroup>
+    <h1>Users</h1>
+    <p>View all users entries.</p>
+  </hgroup>
 
-<hgroup>
-  <h1>Users</h1>
-  <p>View all users entries.</p>
-</hgroup>
+  <a asp-action="Edit" asp-route-id="0">
+    <i class="fa-solid fa-plus"></i>
+    Create new
+  </a>
+</section>
 
 <table id="user-table" class="overflow-auto striped">
   <thead>
