--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,9 +11,8 @@
 @import url("./utilities.css");
 
 /* Global styles */
-
 body {
-    min-height: 100dvh; /* Ensures body spans the full height of the viewport. */
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -21,8 +20,8 @@ body {
 
 .Footer {
     width: 100%;
-    margin-top: auto; /* Pushes the footer to the bottom when the content is less. */
-    text-align: end; /* Optional: Center text for the footer. */
+    margin-top: auto;
+    text-align: end;
 }
 
 .ThemeSwitcher {
