--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @* <link rel="stylesheet" href="~/init.styles.css" asp-append-version="true" /> *@
     @* <script src="~/js/theme-switcher.js"></script> *@
     @await RenderSectionAsync("Styles", required: false)
+    <script src="~/js/pico-modal.js"></script>
     @await RenderSectionAsync("Pre-Scripts", required: false)
 </head>
 
